--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "ramda": "^0.27.0"
   },
   "scripts": {
     "start": "node ./index.js"
