--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "author": "Rostyslav Melnychuk <blackswordgc@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/mongoose": "^5.10.1",
+    "@types/node": "^14.14.9",
     "dotenv": "^8.2.0",
     "mongoose": "^5.8.9",
     "ramda": "^0.27.0"
   },
   "scripts": {
-    "start": "node ./index.js"
+    "start": "ts-node-script ./index.ts"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/ramda": "^0.27.32",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   }
 }
